--- a/Coffee Machine/scss/info.scss
+++ b/Coffee Machine/scss/info.scss
@@ -11,10 +11,10 @@
 
     padding-left: 1.6rem;
 
-    &:not(:last-of-type) {
-      margin-bottom: 0.25rem;
+    .quantity {
+      font-size: 0.75rem;
     }
-
+    
     b {
       font-size: 0.75rem;
       color: $green;
@@ -26,20 +26,21 @@
 
     .ml {
       font-size: 0.75rem;
+      padding-left: 0.25rem;
     }
   }
 
   .cup::after {
     content: "";
     position: absolute;
-    top: calc(50% - 1rem);
+    top: calc(50% - 0.6rem);
     bottom: 0;
-    left: -0.1rem;
+    left: 0.41rem;
 
-    width: 1.75rem;
-    height: 1.75rem;
+    width: 1rem;
+    height: 1rem;
 
-    background-image: url("../images//drink.svg");
+    background-image: url("../images/drink.svg");
     background-repeat: no-repeat;
     background-position: center;
     background-size: 100%;
@@ -47,19 +48,19 @@
 
   .cup--small {
     &::after {
-      top: calc(50% - 0.8rem);
-      left: 0.075rem;
-
-      width: 1.5rem;
-      height: 1.5rem;
+      top: calc(50% - 0.5rem);
+      left: 0.5rem;
+      width: 0.85rem;
+      height: 0.85rem;
     }
   }
 }
 
 .price {
+  display: flex;
   position: relative;
 
-  display: flex;
+  // display: flex;
   align-self: center;
   box-sizing: border-box;
   width: 3rem;
